# RPI-GPU-rdpClient

DesktopStreamer/jni/: Makefile  com_desktopStreamer_VideoStreamer.c  com_desktopStreamer_VideoStreamer.h  encoder_ffmpeg.c  encoder_ffmpeg.h  video_streamer.c  video_streamer.h  x11grab.c  x11grab.h
DesktopStreamer/src/com/desktopStreamer/: Main.java  VideoSocket.java  VideoSocketHandler.java  VideoStreamer.java
Server/: CMakeCache.txt  CMakeLists.txt  controller.hpp  server.cpp  streamer.hpp  wddm.h  windows_controller.hpp
Server/linux/: X11Capture.cpp
Server_x/: Makefile  XCapture.c  xcapture
common/: controller_message.hpp
sdl_client/: client  client.c
